--- a/状态模式/状态模式.vcxproj.filters
+++ b/状态模式/状态模式.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="SoldOutState.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="StateMachine.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -57,6 +60,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="SoldOutState.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="StateMachine.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
