--- a/MVC/MVC.vcxproj.filters
+++ b/MVC/MVC.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="Observer.h">
       <Filter>头文件\view</Filter>
     </ClInclude>
+    <ClInclude Include="Observable.h">
+      <Filter>头文件\model</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MVC.cpp">
