--- a/单例模式/单例模式.vcxproj.filters
+++ b/单例模式/单例模式.vcxproj.filters
@@ -5,26 +5,37 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="头文件">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
     <Filter Include="资源文件">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Singleton.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
+    <Filter Include="惰性初始化">
+      <UniqueIdentifier>{60663137-c8e7-4d72-8aa1-a0f8490b554d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="非惰性初始化">
+      <UniqueIdentifier>{29b8bc34-beda-42a5-afd7-2a951fdf7a34}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Singleton.cpp">
-      <Filter>源文件</Filter>
+      <Filter>惰性初始化</Filter>
     </ClCompile>
+    <ClCompile Include="Singleton2.cpp">
+      <Filter>非惰性初始化</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Singleton.h">
+      <Filter>惰性初始化</Filter>
+    </ClInclude>
+    <ClInclude Include="Singleton2.h">
+      <Filter>非惰性初始化</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ReadMe.md" />
   </ItemGroup>
 </Project>
